# npArtNet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: 02_pipeline_matrices.py  03_local_server.py  04_simple_engine.py  1.1_server_easy_patching.py  1.2_server_pipeline_matrices.py  1.3_server_simple_engine.py  1.4_server_matrix_effect.py  2.1_easy_patching.py  3.2_matrix_effect.py
npArtNet/: __init__.py  client.py  data_types.py  patch.py  server.py  utils.py
npartnet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_client.py  test_integration_loopback.py  test_patch.py  test_server.py
